syntax = "proto3";

package todoPacakge;

service TodoService {
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc readTodos(voidNoParam) returns (TodoItems);
  rpc readTodosStream(voidNoParam) returns (stream TodoItem);
}

message voidNoParam {}

message TodoItem {
  string author = 1;
  string title = 2;
  string content = 3;
}

message TodoItems {
  repeated TodoItem items = 1;
}
